Bug 193870 - digikam freezes after second exif rotation on same file
Summary: digikam freezes after second exif rotation on same file
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Thumbs-Image (other bugs)
Version First Reported In: 1.0.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-24 13:00 UTC by Michael
Modified: 2012-06-27 11:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael 2009-05-24 13:00:19 UTC
Version:           SVN 972108 (using KDE 4.2.2)
OS:                Linux
Installed from:    Ubuntu Packages

Hi everybody,

thanks for working on my previous bug, but it improved only a little bit on my system... 
If I want to change the exifrotation on a file for the first time, it works, if I want to change it on this file for a second time, digikam freezes... after killing and restarting, the rotation is done... I tested iton several PEF, always same behaviour, first time it works, resetting it doesn't work...
I started digikam from terminal, no significant output...

greets mike
Comment 1 caulier.gilles 2009-05-24 13:14:16 UTC
I think it relevant of last code done by Marcel about icon-view Qt4 model/view port. This problem do not only appear when you set thumbs orientation, but also when you assign tag/rating from pop-up menu. Can you confirm it ?

Gilles Caulier
Comment 2 Michael 2009-05-24 13:28:30 UTC
Actually not, rating works fine... and exifrotation works also fine, if it is an picture which hasn't been rotated before... it only freezes if I try to exifrotate an image which has been rotated by digikam before, not necessarily in that session... 
exiv2 on the commandline does it without any problems, on the same image multiple times... 

greets mike
Comment 3 Marcel Wiesweg 2009-05-24 23:35:49 UTC
I have the assumption that in the code for writing metadata to files and for adjusting the Exif orientation something is touching structures that may only be touched from the main event loop. This leads to failed assertions at random places interacting with xlib. This can also be related to 193508.
I will have to audit the code paths touched from there.
Comment 4 Marcel Wiesweg 2009-05-26 22:35:47 UTC
SVN commit 973322 by mwiesweg:

Calling ThumbnailLoadThread::deleteThumbnail deletes QPixmaps from the cache and
must be done in the main UI thread.

BUG: 193870

 M  +10 -1     metadatamanager.cpp  
 M  +5 -0      metadatamanager_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=973322