Calling ThumbnailLoadThread::deleteThumbnail deletes QPixmaps from the cache and must be done in the main UI thread.

BUG: 193870

svn path=/trunk/extragear/graphics/digikam/; revision=973322